# uplink

./: README.md  SPEC.md  pyproject.toml  test.json
.claude/: settings.local.json
tests/: test_parser.py  test_reader.py  test_store.py
uplink/: __main__.py  app.py  parser.py  pty_manager.py  reader.py  server.py  store.py
uplink/templates/: index.html
uplink/widgets/: conversation_panel.py  history_panel.py  input_bar.py
